--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
     database: h2
     properties:
       hibernate.default_schema: ${dbSchema}
+      hibernate.enable_lazy_load_no_trans: true
 #    hibernate:
 #      ddl-auto: create-drop
     show-sql: true
