- logout method added;

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,10 @@ security:
         preferTokenInfo: false
 
 spring:
+  mvc:
+    view:
+      suffix: .html
+      prefix: classpath:templates/
   liquibase:
     change-log: classpath:db/changelog/db.changelog.xml
     parameters:
